# MilPy

./: MANIFEST.in  README.md  environment.yml  install.sh  setup.cfg  setup.py
MilPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
builddocs/: conf.py  index.rst  notes.rst
builddocs/rst/: api_reference.rst
builddocs/rst/subpackages/: travel.rst
builddocs/rst/subpackages/video/: processing.html  processing.rst
docs/: .buildinfo  genindex.html  index.html  notes.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  notes.doctree
docs/.doctrees/rst/: api_reference.doctree
docs/.doctrees/rst/modules/: math.doctree
docs/.doctrees/rst/subpackages/: travel.doctree  video.doctree
docs/_modules/: index.html
docs/_modules/milpy/: math.html
docs/_modules/milpy/travel/: flight_simulator.html
docs/_modules/milpy/video/: processing.html  tools.html
docs/_modules/sphinx/: environment.html
docs/_modules/sphinx/util/: osutil.html
docs/_sources/rst/modules/: math.rst.txt
docs/_sources/rst/subpackages/: video.rst.txt
docs/rst/: api_reference.html
docs/rst/modules/: math.html
docs/rst/subpackages/: travel.html  video.html
docs/rst/subpackages/travel/: flight_simulator.html
docs/rst/subpackages/video/: flight_simulator.html  processing.html  tools.html
milpy/: miscellaneous.py  parallel_processing.py  terminal_interface.py
milpy/travel/anc/: airlines.csv  airports.csv
milpy/video/: _handbrake.py  _spreadsheet_creation.py  _subler.py  processing.py
(+11 files in other folders)
