[metadata]
name = MilPy
version = 0.0.3
author = Zachariah Milby
description = The encapsulation of my Python journey.
home_page = https://github.com/zachariahmilby/MilPy

[options]
include_package_data = True
python_requires >= 3.9
packages = find:
install_requires =
   astropy==4.2.1
   matplotlib==3.4.2
   numpy==1.21.1
   pandas==1.3.0
   spiceypy==4.0.0
   Cartopy==0.19.0.post1
   ephem==4.0.0.2
   pytz==2021.1
   pyproj==3.1.0
   scipy==1.7.0
   subler==0.4.2
   PyQT5==5.15.4
   Sphinx==4.1.2
   pydata-sphinx-theme==0.5.2
   pytest==6.2.4
   fuzzywuzzy==0.18.0
   python-Levenshtein==0.12.2
   openpyxl==3.0.7
   Jinja2==2.11.3
